# template-warp-server

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: rust.yml
scripts/: wait-for.sh
src/: db.rs  main.rs  routes.rs
src/routes/: common.rs  healthz.rs  healthz_test.rs
