[package]
name = "template-warp-server"
version = "0.1.0"
authors = ["Nirman Gupta <nirmangupta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
bson = "0.14"
dotenv = "0.15"
env_logger = "0.7"
log = "0.4"
mongodb = "0.9.2"
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
